fix(head): remove double border issue on download table

--- a/applications/head/src/components/styles/DocumentSimpleTableResults.module.scss
+++ b/applications/head/src/components/styles/DocumentSimpleTableResults.module.scss
@@ -18,12 +18,16 @@
   }
 
   .row {
-    &--checked {
+    &--checked:global(.MuiTableRow-root) {
       // Hack for position relative for tr
       // See https://github.com/w3c/csswg-drafts/issues/1899
       transform: scale(1);
-      background-color: rgba($color-cyan-400, 0.1) !important;
-      box-shadow: inset 0px 0px 0px 1px $color-cyan-400;
+      background-color: rgba($color-cyan-400, 0.1);
+      border: 1px solid $color-cyan-400;
+    }
+
+    &:first-of-type.row--checked {
+      box-shadow: inset 0px 1px 0px $color-cyan-400;
     }
   }
 
